src/App.css
@keyframes fade-in {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes slide-right {
  from {
    margin-left: -10px;
  }

  to {
    margin-left: 0;
  }
}

@keyframes slide-up {
  from {
    margin-top: 20px;
  }

  to {
    margin-top: 0;
  }
}

@keyframes floating {
  0% {
    transform: translate(0, 0px);
  }

  50% {
    transform: translate(0, 3px);
  }

  100% {
    transform: translate(0, -0px);
  }
}

@keyframes blob {
  0% {
    border-radius: 50% 70% 60% 50%/60% 50% 70% 50%;
  }

  50% {
    border-radius: 70% 50% 70% 60%/70% 60% 50% 60%;
  }

  100% {
    border-radius: 50% 70% 60% 50%/60% 50% 70% 50%;
  }
}

* {
  font-family: "Raleway", sans-serif;
  text-decoration: none;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  list-style: none;
  scroll-behavior: smooth;
  color: var(--text);
}

/* palette */
:root {
  --background: #FAF5F5ff;
  --text: #585048;
  --headingsLinks: #D08E7Fff;
  --accent: #f5b39d;
}

body {
  background-color: var(--background);
  color: var(--text);
  position: relative;
  max-height: 100vh;
  width: 100%;
  /* overflow: hidden; */
}

#navbar-container {
  width: 100%;
  position: relative;
  background: transparent;
  padding: 0 7%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

#logo {
  width: 90px;
  padding: 0;
  margin: 0;
}

/* navbar name */
#name {
  text-align: center;
  margin: 1% 7%;
  animation: fade-in 1s ease;
}

.navbar-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin: 1% 2%;
}

.navbar-list:after {
  content: "";
  width: 125px;
  height: 1px;
  display: block;
  opacity: 30%;
  animation: fade-in 2s ease;
  background: var(--text);
}

.navbar-list li {
  color: var(--text);
  font-size: 22px;
  font-weight: 700;
  margin: 0 25px;
  opacity: 90%;
  animation: fade-in 2s ease;
}

.navbar-list li:hover {
  color: var(--accent);
  animation: floating 1.5s ease-in-out infinite;
  cursor: pointer;
}

.resume {
  font-weight: 700;
  font-size: 18px;
  color: var(--headingsLinks);
  border: none;
  border-radius: 5px;
  animation: fade-in 2s ease;
}

.resume:hover {
  cursor: pointer;
  color: var(--accent);
  transition: all 0.5s ease;
}

/* home pg */
.home {
  height: auto;
  width: 100vw;
  display: flex;
  flex-direction: column;
  padding: 3% 15% 6% 11%;
  justify-content: center;
}

.home-content {
  display: flex;
  column-gap: 10%;
  padding-bottom: 40px;
  justify-content: center;
}

.home-img {
  text-align: center;
  flex-basis: 42.5%;
}


.home-img img {
  max-width: 450px;
  width: 100%;
  opacity: 90%;
  box-shadow: 10px 15px 20px rgb(82, 82, 82);
  animation: slide-up 1s ease, fade-in ease 3s;
  animation: blob 10s ease-in-out infinite;
  transition: all 1s ease-in-out;
}

.home-text {
  display: flex;
  flex-basis: 43%;
  flex-direction: column;
  justify-content: center;
}

/* all p tags */
p {
  line-height: 1.7;
  font-size: 18px;
  font-weight: 400;
}

.home-text h1 {
  font-size: 50px;
  font-weight: 600;
  line-height: 1.5;
  animation: fade-in 3s ease, slide-right 1s ease;
}

.home-text p,
.home-text h2 {
  animation: fade-in ease 4s;
}

/* all h2 tags */
h2 {
  opacity: 60%;
  font-size: 30px;
  font-weight: 600;
  font-size: 20px;
  padding: 0 0 20px 0;
}

/* learn more btn home pg */
.cont-btn {
  background-color: var(--accent);
  font-size: 20px;
  border: 2px solid var(--accent);
  border-radius: 40px;
  cursor: pointer;
  height: 45px;
  width: 145px;
  align-content: center;
  animation: fade-in 3s ease;
}
.cont-btn:hover {
  background-color: var(--headingsLinks);
  border: var(--drk-pink);
  transition: 1s ease;
  opacity: 70%;
}
.cont-btn a {
  color: var(--text);
  font-weight: 600;
}
.cont-btn:hover a {
  color: white;
}

/* about pg */
.about-content {
  animation: fade-in ease 2s;
}
.about {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 4% 15% 2% 12.5%;
}

.about-text {
  width: 60%;

}

.about-text p {
  width: 90%;
  line-height: 1.8;
  font-size: 20px;
}

.about-img {
  width: 30%;
}

.about-text h2 {
  font-size: 36px;
  color: var(--headingsLinks);
}

.about-img img {
  max-width: 450px;
  width: 100%;
  margin: 15% 0;
  opacity: 80%;
  transition: all 0.5s ease;
  box-shadow: 10px 15px 20px rgb(82, 82, 82);
  animation: fade-in ease 2s;
  animation: blob 10s ease-in-out infinite;
  transition: all 1s ease-in-out;
}

/* project pg */
.projects {
  width: 100vw;
  display: flex;
  flex-direction: column;
  padding: 0px 10%;
  animation: fade-in ease 2s;
}

.projects h2 {
  font-size: 35px;
  text-align: center;
  padding-bottom: 30px;
  color: var(--headingsLinks);
}

.project-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 2.5rem;
  margin-bottom: 3%;
}

.project {
  position: relative;
  overflow: hidden;
  border: 1px solid rgba(116, 116, 116, 0.127);
  border-radius: 3px;
  display: block;
  max-width: 400px;
  max-height: 350px;
}

.project:hover {
  transform: scale(1.03);
  transition: all 0.5s ease;
  box-shadow: 15px 15px 15px rgba(128, 127, 127, 0.479);
}

.project img {
  max-width: 400px;
  height: 350px;
  border-radius: 3px;
  opacity: 90%;
  object-fit: cover;
  transition: all 0.2s ease;
}

.project:hover img {
  transform: scale(1.15);
  transition: all 0.2s ease;
  opacity: 0%;
}

.project:hover .project-info {
  height: 100%;
  transition: all 0.4s ease;
}

.project-card {
  max-width: 400px;
  height: auto;
  display: flex;
  justify-content: center;
  align-items: center;
}

.project-info {
  width: 100%;
  height: 27%;
  background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.591));
  position: absolute;
  border-radius: 3px;
  left: 0;
  bottom: 0;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  padding: 20px;
  transition: all 0.4s ease;
}

.project p {
  font-weight: 600;
}

.project-icon {
  font-size: 35px;
  color: black;
  margin: 0 10px;
}

/* footer */
footer {
  text-align: center;
  position: relative;
  bottom: 0;
  width: 100%;
  padding: 20px;
}

footer p {
  font-size: 15px;
}
.social-icons-footer li {
  display: inline;
  margin: 0% 1%;
}
.social-icons-footer li i, .social-icons-footer a {
  font-size: 30px;
}

/* for mobile view */
#mobile-menu {
  font-size: 30px;
  cursor: pointer;
  display: none;
}

@media screen and (width <=1200px) {
  #navbar-container {
    flex-direction: row;
    align-content: center;
  }

  .home-content {
    flex-direction: column;
    row-gap: 2rem;
    text-align: center;
  }

  .home-img {
    max-width: 40%;
    align-self: center;
    text-align: center;
  }

  .home-text h1 {
    font-size: 40px;
    padding-left: 15px;
  }

  .home-text h2 {
    font-size: 22px;
    line-height: 2;
    padding-left: 15px;
  }

  .home-text p {
    font-size: 22px;
    padding-left: 15px;
    margin: auto;
    width: 70%;
  }

  .cont-btn {
    align-self: center;
  }

  .projects {
    padding-top: 2%;
  }
  .project-container {
    column-gap: 1rem;
  }
  .about-img {
    display: none;
  }
  .about-content {
    padding: 3% 0 6% 0;
  }

  .about-text {
    width: 90%
  }
  .about p {
    font-size: 20px;
  }
  #table td {
    font-size: 19px;
  }
  #table {
    width: 85%;
  }


}

@media screen and (width <=900px) {
  .navbar-list:after {
    display: none;
  }
  #sidebar {
    display: none;
  }
  .home {
    padding: 0;
  }
}

@media screen and (width <=650px) {
  .home-content {
    padding-top: 10%;
  }

  .home-text h2 {
    font-size: 20px;
    line-height: 2;
  }

  .home-text p {
    font-size: 15px;
    line-height: 2;
  }

  .projects {
    padding-top: 7%;
  }


  .project img {
    height: 350px;
  }

  .project-info {
    height: 23%;
  }

  .about-img {
    display: none;
  }

  .about-text {
    width: 100%;
  }
}


/* content container */
/* sidebar */
#sidebar {
  position: fixed;
  margin-right: 3%;
  left: 90%;
  bottom: 20%;
  opacity: 90%;
}
#sidebar:after {
  content: "";
  width: 300px;
  height: 1px;
  display: block;
  opacity: 30%;
  background: var(--text);
  rotate: 90deg;
  position: absolute;
  margin-right: 3%;
  right: -195%;
  bottom: -60%;
  opacity: 50%;
}
#sidebar ul {
  display: flex;
  flex-direction: column;
  align-items: center;
}
#sidebar li {
  margin: 11px;
}
#sidebar i {
  font-size: 40px;
}
#sidebar li:hover {
  animation: floating 1.5s ease-in-out infinite;
}
#cv {
  border: 4px solid var(--text);
  border-radius: 7px;
  padding: 5px 3px;
  opacity: 90%;
}

#table {
  margin: 0 12% 3% 12%;
  padding-bottom: 5%;
}

#table h2 {
  font-size: 30px;
  color: var(--headingsLinks);
  margin: 0 5%;
}

table {
  text-align: left;
  width: 70%;
  margin: 0 5%;
}

td {
  border-right: 1px solid var(--text);
  padding: 3px 5px;
  text-align: center;
}
td:last-child {
  border-right: none;
}

th {
  border-right: none;
}

